# pydexcom

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pydexcom.code-workspace  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yaml  pre-commit.yaml  pre-commit.yml  publish.yaml  publish.yml  python-package.yml  run-tests.yml  test.yaml  validate.yml
examples/: simple_readings.py
pydexcom/: __init__.py  base.py  const.py  dexcom.py  errors.py  glucose_reading.py  util.py
pydexcom/aiohttp/: dexcom.py
pydexcom/requests/: dexcom.py
stubs/vcr/: __init__.pyi
stubs/vcr/cassette/: __init__.pyi
tests/: __init__.py  conftest.py  requirements.txt  test_authentication.py  test_dexcom.py  test_glucose_reading.py  test_glucose_readings.py
tests/cassettes/: TestDexcom.test_dexcom[p@$$w0rd-u$ern@me].yaml  TestDexcom.test_dexcom[p@$$w0rd-username].yaml  TestDexcom.test_dexcom[password-u$ern@me].yaml  TestDexcom.test_dexcom[password-username].yaml  TestGlucoseReading.test_get_current_glucose_reading.yaml  TestGlucoseReading.test_get_current_glucose_reading_session_expired.yaml  TestGlucoseReading.test_get_glucose_readings[0-0].yaml  TestGlucoseReading.test_get_glucose_readings[0-10].yaml  TestGlucoseReading.test_get_glucose_readings[1-0].yaml  TestGlucoseReading.test_get_glucose_readings[1-10].yaml  TestGlucoseReading.test_get_latest_glucose_reading.yaml
tests/cassettes/test_dexcom/TestDexcom/: test_dexcom[None--p@$$w0rd].yaml  test_dexcom[None--password].yaml  test_dexcom[None-00000000-0000-0000-0000-000000000000-p@$$w0rd].yaml  test_dexcom[None-00000000-0000-0000-0000-000000000000-password].yaml  test_dexcom[None-1-p@$$w0rd].yaml  test_dexcom[None-1-password].yaml  test_dexcom[None-55555555-5555-5555-5555-555555555555-p@$$w0rd].yaml  test_dexcom[None-55555555-5555-5555-5555-555555555555-password].yaml  test_dexcom[None-99999999-9999-9999-9999-999999999999-p@$$w0rd].yaml  test_dexcom[None-99999999-9999-9999-9999-999999999999-password].yaml  test_dexcom[ous-None-55555555-5555-5555-5555-555555555555-p@$$w0rd].yaml  test_dexcom[ous-None-55555555-5555-5555-5555-555555555555-password].yaml  test_dexcom[ous-None-99999999-9999-9999-9999-999999999999-p@$$w0rd].yaml  test_dexcom[ous-None-99999999-9999-9999-9999-999999999999-password].yaml  test_dexcom[ous-u$ern@me-None-p@$$w0rd].yaml  test_dexcom[ous-u$ern@me-None-password].yaml  test_dexcom[ous-username-None-p@$$w0rd].yaml  test_dexcom[ous-username-None-password].yaml  test_dexcom[p@$$w0rd-u$ern@me].yaml  test_dexcom[p@$$w0rd-username].yaml  test_dexcom[password-u$ern@me].yaml  test_dexcom[password-username].yaml  test_dexcom[u$ern@me-None-p@$$w0rd].yaml  test_dexcom[u$ern@me-None-password].yaml  test_dexcom[us-None-55555555-5555-5555-5555-555555555555-p@$$w0rd].yaml  test_dexcom[us-None-55555555-5555-5555-5555-555555555555-password].yaml  test_dexcom[us-None-99999999-9999-9999-9999-999999999999-p@$$w0rd].yaml  test_dexcom[us-u$ern@me-None-p@$$w0rd].yaml  (+6 more)
typings/vcr/record_mode/: __init__.pyi
(+32 files in other folders)
