[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pydexcom"
authors = [
    {name = "Gage Benne"},
]
description = "Python API to interact with Dexcom Share API"
readme = "README.md"
requires-python = ">=3.6"
keywords = ["dexcom"]
license = {text = "MIT"}
dependencies = [
    "requests>=2.0",
]
dynamic = ["version"]

[tool.setuptools_scm]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "normal"