[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "pydexcom"
authors = [
    {name = "Gage Benne"},
]
description = "Python API to interact with Dexcom Share API"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["dexcom"]
license = {text = "MIT"}
dependencies = [
    "requests>=2.0",
]
dynamic = ["version"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
installer = "uv"
extra-dependencies = [
    "pre-commit",
    "ruff",
    "mypy",
]

[tool.hatch.envs.hatch-test]
extra-dependencies = [
  "vcrpy~=7.0.0",
]

[[tool.hatch.envs.hatch-test.matrix]]
python = ["3.13", "3.12", "3.11", "3.10", "3.9"]

[tool.hatch.envs.docs]
dependencies = [
    "pdoc"
]
[tool.hatch.envs.docs.scripts]
build = "pdoc -o docs pydexcom"
serve = "pdoc pydexcom"

[tool.ruff]
fix = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "SLF001"]

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
ignore = ["FA100", "D212", "D203", "COM812"]
select = ["ALL"]

[tool.mypy]
mypy_path = "stubs"
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_unimported = true
warn_redundant_casts = true
warn_unused_configs = true
follow_imports = "normal"